<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/goods_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/goods_text"
        android:textColor="@android:color/black"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/stationary_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/cosmetics_Image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/cosmetics"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cosmetics_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/cosmetics_text"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cosmetics_Image" />

    <ImageView
        android:id="@+id/stationary_Image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/stationary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stationary_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stationary_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationary_Image" />

    <ImageView
        android:id="@+id/appliances_Image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:src="@drawable/aplliances"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/stationary_Image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appliances_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/appliances_text"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/stationary_TextView"
        app:layout_constraintTop_toBottomOf="@+id/appliances_Image" />

</androidx.constraintlayout.widget.ConstraintLayout>